# cvanalyzer

./: app.py  cv_analyzer.py  models.py  pdf_generator.py  pyproject.toml
static/js/: main.js
templates/: dashboard.html  index.html  login.html  register.html
